video wrapping fix

--- a/index.scss
+++ b/index.scss
@@ -53,7 +53,6 @@ html, body {
     width: 100%;
     height: 74px;
     background: linear-gradient(#0000008c,#00000000);
-    
 }
     z-index: 2;
     color: white;
@@ -178,14 +177,17 @@ html, body {
 }
 
 .section-intro {
-    video {
-        flex: 0 1 50%;
-        width: 400px;
-        max-width: 100%;
+    .video-intro {
+        flex: 0 1 auto;
+        video {
+            max-width: 100%;
+            width: 300px;
+        }
     }
     p {
         max-width: 100%;
-        flex: 1 0 700px;
+        padding-right: 0 !important;
+        flex: 1 0 50%;
         font-size: 1.75rem;
         font-weight: 100;
     }
